--- a/templates/docker.html
+++ b/templates/docker.html
@@ -12,7 +12,27 @@
         </tr>
     </thead>
     <tbody>
-
+        {% for c in context.containers %}
+        <tr>
+            <th scope="row">{{ c.name }}</th>
+            <td>{{ c.short_id }} </td>
+            <td>{{ c.image.tags[0] }}</td>
+            <td>{{ c.status }}</td>
+            <td>
+                <div class="row">
+                    <div class="col-6">
+                        <a href="/docker/start/{{ c.short_id }}">
+                        <i class="far fa-play-circle"></i>
+                    </div>
+                    <div class="col-6">
+                        <a href="/docker/stop/{{ c.short_id }}">
+                        <i class="far fa-stop-circle"></i>
+                    </div>
+                </div>
+            </td>
+        </tr>
+        
+        {% endfor %}
     </tbody>
 </table>
 {% endblock %}
