--- a/templates/jenkins.html
+++ b/templates/jenkins.html
@@ -1,5 +1,36 @@
 {% extends 'index.html' %}
 
 {% block content%}
-Jenkins
+<table class="table table-hover table-dark">
+    <thead>
+        <tr>
+            <th scope="col">Job</th>
+            <th scope="col">Status</th>
+            <th scope="col">Última vez</th>
+            <th scope="col">Ações</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for j in context.jobs %}
+        <tr>
+            <th scope="row">{{ j.name }}</th>
+            <td>{{ j.color }} </td>
+            <td>{{ j.url }}</td>
+            <td>
+                <div class="row">
+                    <div class="col-6">
+                        <a href="/jenkins/build/{{ j.name }}">
+                        <i class="far fa-play-circle"></i>
+                    </div>
+                    <div class="col-6">
+                        <a href="/jenkins/">
+                        <i class="far fa-stop-circle"></i>
+                    </div>
+                </div>
+            </td>
+        </tr>
+        
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
