--- a/templates/docker.html
+++ b/templates/docker.html
@@ -4,11 +4,11 @@
 <table class="table table-hover table-dark">
     <thead>
         <tr>
-            <th scope="col">Nome</th>
+            <th scope="col">Name</th>
             <th scope="col">ID</th>
-            <th scope="col">Imagem</th>
+            <th scope="col">Image</th>
             <th scope="col">Status</th>
-            <th scope="col">Ações</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
