--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item {{ 'active' if context.page == 'docker' else '' }}">
+                <!-- <i class="fab fa-docker"></i> -->
                 <a class="nav-link" href="/docker">Docker <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item {{ 'active' if context.page == 'jenkins' else '' }}">
