--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     
+    {% if not context.isPublic %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Python | SysAdmin</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,10 +30,33 @@
             <li class="nav-item {{ 'active' if context.page == 'gitlab' else '' }}">
                 <a class="nav-link" href="/gitlab">Gitlab <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item {{ 'active' if context.page == 'sign-up' else '' }}">
+                <a class="nav-link" href="/sign-up">Sign-up <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item {{ 'active' if context.page == 'sign-out' else '' }}">
+                <a class="nav-link" href="/sign-out">Sign-out <span class="sr-only">(current)</span></a>
+            </li>
            </ul>
         </div>
 
       </nav>
+    {% endif %}
+
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <div class="alerts">
+        {% for category, message in messages %}
+            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">×</span>
+                </button>
+            </div>
+        {% endfor %}
+        </div>
+    {% endif %}
+{% endwith %}
+
 
    <div class="container mt-3">
         <div class="card shadow rounded">
