--- a/templates/docker.html
+++ b/templates/docker.html
@@ -1,38 +1,39 @@
 {% extends 'index.html' %}
 
-{% block content%}
+{% block content %}
 <table class="table table-hover table-dark">
-    <thead>
-        <tr>
-            <th scope="col">Name</th>
-            <th scope="col">ID</th>
-            <th scope="col">Image</th>
-            <th scope="col">Status</th>
-            <th scope="col">Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for c in context.containers %}
-        <tr>
-            <th scope="row">{{ c.name }}</th>
-            <td>{{ c.short_id }} </td>
-            <td>{{ c.image.tags[0] }}</td>
-            <td>{{ c.status }}</td>
-            <td>
-                <div class="row">
-                    <div class="col-6">
-                        <a href="/docker/start/{{ c.short_id }}">
-                        <i class="far fa-play-circle"></i>
-                    </div>
-                    <div class="col-6">
-                        <a href="/docker/stop/{{ c.short_id }}">
-                        <i class="far fa-stop-circle"></i>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        
-        {% endfor %}
-    </tbody>
+  <thead>
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">ID</th>
+      <th scope="col">Image</th>
+      <th scope="col">Status</th>
+      <th scope="col">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for c in context.containers %}
+      <tr>
+        <th scope="row">{{ c.name }}</th>
+        <td>{{ c.short_id }}</td>
+        <td>{{ c.image.tags[0] }}</td>
+        <td>{{ c.status }}</td>
+        <td>
+          <div class="row">
+            <div class="col-6">
+              <a href="/docker/start/{{ c.short_id }}">
+                <i class="fas fa-play"></i>
+              </a>
+            </div>
+            <div class="col-6">
+              <a href="/docker/stop/{{ c.short_id }}">
+                <i class="fas fa-stop"></i>
+              </a>
+            </div>
+          </div>
+        </td>
+      </tr>
+    {% endfor %}
+  </tbody>
 </table>
 {% endblock %}
