--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -1,17 +1,26 @@
 {% extends 'index.html' %}
 
-{% block content%}
+{% block content %}
 <form action="/sign-in" method="POST">
-    <div>
-        <label for="email">Login</label>
-        <input type="text" id="email" name="email" placeholder="shortname">
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password">
-    </div>
-    <div>
-        <button type="submit">Log in</button>
-    </div>
-</form>
+	<div class="form-group">
+	  <label for="email">Email </label>
+	  <input type="text" class="form-control" id="email" aria-describedby="emailHelp">
+	</div>
+	<div class="form-group">
+	  <label for="password">Password </label>
+	  <input type="password" class="form-control" id="password">
+	</div>
+	<button type="submit" class="btn btn-dark">Dark<Submit</button>
+  </form>
+<!-- <form action="/sign-in" method="POST">
+  <div>
+		<label for="email">Email</label>
+		<input type="text" id="email" name="email">
+	</div>
+	<div>
+		<label for="password">Senha</label>
+		<input type="password" id="password" name="password">
+	</div>
+	<button type="submit">Entrar</button>
+</form> -->
 {% endblock %}
