--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -1,25 +1,42 @@
 {% extends 'index.html' %}
 
-{% block content%}
-<form action="/sign-in" method="POST">
-    <div>
-        <label for="first_name">First Name</label>
-        <input type="text" id="first_name" name="first_name">
-    </div>
-    <div>
-        <label for="last_name">Last Name</label>
-        <input type="text" id="last_name" name="last_name">
-    </div>
-    <div>
-        <label for="email">Email</label>
-        <input type="text" id="email" name="email">
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password">
-    </div>
-    <div>
-        <button type="submit">Submit</button>
-    </div>
+{% block content %}
+<!-- <form action="/sign-up" method="POST">
+  <div class="form-group">
+    <label for="first_name">First Name </label>
+    <input type="text" class="form-control" id="first_name" aria-describedby="emailHelp">
+  </div>
+  <div class="form-group">
+    <label for="last_name">Last Name </label>
+    <input type="text" class="form-control" id="last_name" id="last_name" aria-describedby="emailHelp">
+  </div>
+  <div class="form-group">
+    <label for="email">Email </label>
+    <input type="email" class="form-control" id="email" id="email" aria-describedby="emailHelp">
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" id="password">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form> -->
+<form action="/sign-up" method="POST">
+  <div>
+    <label for="first_name">First Name</label>
+    <input type="text" id="first_name" name="first_name">
+  </div>
+  <div>
+    <label for="last_name">Last Name</label>
+    <input type="text" id="last_name" name="last_name">
+  </div>
+  <div>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email">
+  </div>
+  <div>
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password">
+  </div>
+  <button type="submit">Register</button>
 </form>
 {% endblock %}
